<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/maugram"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconMode="clear_text"
        app:startIconContentDescription="@string/contentDescriptionInEditTextEmail"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/contentDescriptionInEditTextEmail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconContentDescription="@string/contentDescriptionInEditTextPassword"
        app:boxBackgroundMode="outline"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/contentDescriptionInEditTextPassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/loginButtonText" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/txtLoginHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHelper"/>
        <TextView
            android:id="@+id/txtLoginToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:text="@string/intentSignUp"
            android:onClick="LoginToRegisterIntentText"/>
    </LinearLayout>

</LinearLayout>